--- a/lidl_ts1001_z2m_v2.yaml
+++ b/lidl_ts1001_z2m_v2.yaml
@@ -1,34 +1,132 @@
----
 blueprint:
-  name: Naprawiony Pilot Livarno TS1001
-  description: Wersja z szerokim selektorem dla Zigbee2MQTT
+  name: Lidl TS1001 – Zigbee2MQTT Remote
+  description: Obsługa pilota Lidl / Silvercrest TS1001 przez Zigbee2MQTT
   domain: automation
   input:
     remote:
-      name: Pilot
-      description: Wybierz swoje urządzenie (SW SALON table)
+      name: Pilot TS1001 (Z2M)
+      description: Wybierz encję action z Zigbee2MQTT
       selector:
-        device:
-          integration: mqtt
-          model: TS1001
-    light_target:
-      name: Światło
+        entity:
+          domain:
+            - sensor
+          multiple: false
+    button_1_single:
+      name: Przycisk 1 – Single
+      default: []
       selector:
-        target:
-          entity:
-            domain: light
+        action: {}
+    button_1_double:
+      name: Przycisk 1 – Double
+      default: []
+      selector:
+        action: {}
+    button_1_hold:
+      name: Przycisk 1 – Hold
+      default: []
+      selector:
+        action: {}
+    button_1_release:
+      name: Przycisk 1 – Release
+      default: []
+      selector:
+        action: {}
+    button_2_single:
+      name: Przycisk 2 – Single
+      default: []
+      selector:
+        action: {}
+    button_2_double:
+      name: Przycisk 2 – Double
+      default: []
+      selector:
+        action: {}
+    button_2_hold:
+      name: Przycisk 2 – Hold
+      default: []
+      selector:
+        action: {}
+    button_2_release:
+      name: Przycisk 2 – Release
+      default: []
+      selector:
+        action: {}
+    button_3_single:
+      name: Przycisk 3 – Single
+      default: []
+      selector:
+        action: {}
+    button_3_double:
+      name: Przycisk 3 – Double
+      default: []
+      selector:
+        action: {}
+    button_3_hold:
+      name: Przycisk 3 – Hold
+      default: []
+      selector:
+        action: {}
+    button_3_release:
+      name: Przycisk 3 – Release
+      default: []
+      selector:
+        action: {}
+    button_4_single:
+      name: Przycisk 4 – Single
+      default: []
+      selector:
+        action: {}
+    button_4_double:
+      name: Przycisk 4 – Double
+      default: []
+      selector:
+        action: {}
+    button_4_hold:
+      name: Przycisk 4 – Hold
+      default: []
+      selector:
+        action: {}
+    button_4_release:
+      name: Przycisk 4 – Release
+      default: []
+      selector:
+        action: {}
+  source_url: https://github.com/kubajka/ha_blueprints/blob/main/lidl_ts1001_z2m.yaml
+mode: single
 trigger:
-  - platform: device
-    domain: mqtt
-    device_id: remote
-    type: action
-    subtype: on
-    id: wlacz
+  - platform: state
+    entity_id: !input remote
 action:
   - choose:
-      - conditions:
-          - condition: trigger
-            id: wlacz
-        sequence:
-          - service: light.toggle
-            target: light_target
+      - conditions: "{{ trigger.to_state.state == 'button_1_single' }}"
+        sequence: !input button_1_single
+      - conditions: "{{ trigger.to_state.state == 'button_1_double' }}"
+        sequence: !input button_1_double
+      - conditions: "{{ trigger.to_state.state == 'button_1_hold' }}"
+        sequence: !input button_1_hold
+      - conditions: "{{ trigger.to_state.state == 'button_1_release' }}"
+        sequence: !input button_1_release
+      - conditions: "{{ trigger.to_state.state == 'button_2_single' }}"
+        sequence: !input button_2_single
+      - conditions: "{{ trigger.to_state.state == 'button_2_double' }}"
+        sequence: !input button_2_double
+      - conditions: "{{ trigger.to_state.state == 'button_2_hold' }}"
+        sequence: !input button_2_hold
+      - conditions: "{{ trigger.to_state.state == 'button_2_release' }}"
+        sequence: !input button_2_release
+      - conditions: "{{ trigger.to_state.state == 'button_3_single' }}"
+        sequence: !input button_3_single
+      - conditions: "{{ trigger.to_state.state == 'button_3_double' }}"
+        sequence: !input button_3_double
+      - conditions: "{{ trigger.to_state.state == 'button_3_hold' }}"
+        sequence: !input button_3_hold
+      - conditions: "{{ trigger.to_state.state == 'button_3_release' }}"
+        sequence: !input button_3_release
+      - conditions: "{{ trigger.to_state.state == 'button_4_single' }}"
+        sequence: !input button_4_single
+      - conditions: "{{ trigger.to_state.state == 'button_4_double' }}"
+        sequence: !input button_4_double
+      - conditions: "{{ trigger.to_state.state == 'button_4_hold' }}"
+        sequence: !input button_4_hold
+      - conditions: "{{ trigger.to_state.state == 'button_4_release' }}"
+        sequence: !input button_4_release
